--- a/정희석/assets/css/reset.css
+++ b/정희석/assets/css/reset.css
@@ -1,35 +1,38 @@
 @font-face {
-    font-family: 'IropkeBatang';
+    font-family: 'PPRightSans-CompactDark';
     font-weight: normal;
     font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot');
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot?#iefix') format('embedded-opentype'),
-         url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff2') format('woff2'),
-         url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff') format('woff'),
-         url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.ttf') format("truetype");
+    src: url('../fonts/PPRightSans-CompactDark.woff2') format('woff2'),
+         url('../fonts/PPRightSans-CompactDark.woff') format('woff'),;
     font-display: swap;
 }
 @font-face {
-    font-family: 'PP Hatton';
-    src: url('../fonts/PPHatton-Bold.woff2') format('woff2');
-    font-weight: 700;
+    font-family: 'PPRightSans-Light';
+    font-weight: normal;
     font-style: normal;
+    src: url('../fonts/PPRightSans-Light.woff2') format('woff2'),
+         url('../fonts/PPRightSans-Light.woff') format('woff'),;
     font-display: swap;
 }
 @font-face {
-    font-family: 'PP Hatton';
-    src: url('../fonts/PPHatton-Medium.woff2') format('woff2');
-    font-weight: 500;
+    font-family: 'PPRightSans-Medium';
+    font-weight: normal;
     font-style: normal;
+    src: url('../fonts/PPRightSans-Medium.woff2') format('woff2'),
+         url('../fonts/PPRightSans-Medium.woff') format('woff'),;
     font-display: swap;
 }
 @font-face {
-    font-family: 'PP Hatton';
-    src: url('../fonts/PPHatton-Ultralight.woff2') format('woff2');
-    font-weight: 200;
+    font-family: 'PPRightSans-TightMedium';
+    font-weight: normal;
     font-style: normal;
+    src: url('../fonts/PPRightSans-TightMedium.woff2') format('woff2'),
+         url('../fonts/PPRightSans-TightMedium.woff') format('woff'),;
     font-display: swap;
 }
+
+
+
 
 /* border-box 초기화 */
 *,
@@ -200,94 +203,27 @@ select {
 }
 
 /* 간격 셋팅 */
-.mt0 {
-    margin-top: 0;
-}
+.mt0   {margin-top: 0;}
+.mt10  {margin-top: 10px;}
+.mt20  {margin-top: 20px;}
+.mt30  {margin-top: 30px;}
+.mt40  {margin-top: 40px;}
+.mt50  {margin-top: 50px;}
+.mt60  {margin-top: 60px;}
+.mt70  {margin-top: 70px;}
+.mt80  {margin-top: 80px;}
+.mt90  {margin-top: 90px;}
+.mt100 {margin-top: 100px;}
 
-.mt10 {
-    margin-top: 10px;
-}
-
-.mt20 {
-    margin-top: 20px;
-}
-
-.mt30 {
-    margin-top: 30px;
-}
-
-.mt40 {
-    margin-top: 40px;
-}
-
-.mt50 {
-    margin-top: 50px;
-}
-
-.mt60 {
-    margin-top: 60px;
-}
-
-.mt70 {
-    margin-top: 70px;
-}
-
-.mt80 {
-    margin-top: 80px;
-}
-
-.mt90 {
-    margin-top: 90px;
-}
-
-.mt100 {
-    margin-top: 100px;
-}
-
-.pt0 {
-    padding-top: 0;
-}
-
-.pt10 {
-    padding-top: 10px;
-}
-
-.pt20 {
-    padding-top: 20px;
-}
-
-.pt30 {
-    padding-top: 30px;
-}
-
-.pt40 {
-    padding-top: 40px;
-}
-
-.pt50 {
-    padding-top: 50px;
-}
-
-.pt60 {
-    padding-top: 60px;
-}
-
-.pt70 {
-    padding-top: 70px;
-}
-
-.pt80 {
-    padding-top: 80px;
-}
-
-.pt90 {
-    padding-top: 90px;
-}
-
-.pt100 {
-    padding-top: 100px;
-}
-
-.pt200 {
-    padding-top: 200px;
-}
+.pt0   {padding-top: 0;}
+.pt10  {padding-top: 10px;}
+.pt20  {padding-top: 20px;}
+.pt30  {padding-top: 30px;}
+.pt40  {padding-top: 40px;}
+.pt50  {padding-top: 50px;}
+.pt60  {padding-top: 60px;}
+.pt70  {padding-top: 70px;}
+.pt80  {padding-top: 80px;}
+.pt90  {padding-top: 90px;}
+.pt100 {padding-top: 100px;}
+.pt200 {padding-top: 200px;}
