--- a/이은지/assets/css/style.css
+++ b/이은지/assets/css/style.css
@@ -1,3 +1,6 @@
+body {
+    background: #000;
+}
 #header {
     position: fixed;
     left: 0;
@@ -7,7 +10,7 @@
     backdrop-filter: blur(20px);
     display: flex;
     align-items: end;
-    z-index: 1000;
+    z-index: 10000;
 }
 #header h1 {
     color: #fff;
@@ -48,6 +51,24 @@
     align-items: center;
     justify-content: center;
     position: relative;
+}
+#section1 .story {
+    font-family: 'IropkeBatang';
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+#section1 .story > div {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    /* background-color: #ccc; */
+    font-size: 3vw;
+    white-space: nowrap;
 }
 #canvas {
     position: absolute;
@@ -95,6 +116,67 @@
 
 #section2 {
     width: 100%;
+    padding-bottom: 30vh;
+    background-color: #fff;
+    z-index: 2000;
+    position: relative;
+}
+#section2 h2 {
+    color: #0f490f;
+    font-family: PP Hatton;
+    text-align: center;
+    padding: 10vw 0 6vw;
+    font-size: 6vw;
+    font-weight: 300;
+}
+#section2 h2 em {
+    font-weight: 500;
+}
+#section2 .img {
+    width: 20vw;
+    height: 60vh;
+    margin: 0 auto;
+    border-radius: 300px;
+    overflow: hidden;
+    background-image: url(https://my-portfolio-vite.web.app/assets/me04-bf23a26c.jpg);
+    background-size: cover;
+    background-position: center center;
+}
+#section2 .desc {
+    text-align: center;
+    font-family: PP Hatton;
+    font-size: 5vw;
+    color: #0f490f;
+    font-weight: 300;
+    padding-top: 6vw;
+}
+#section2 .desc em {
+    font-weight: 500;
+}
+#section2 .left {
+    position: absolute;
+    top: 35%;
+    left: 10%;
+    width: 20vw;
+    font-family: 'IropkeBatang';
+    line-height: 1.6;
+    color: #0F0F0F;
+}
+#section2 .right {
+    position: absolute;
+    top: 40%;
+    right: 10%;
+    width: 20vw;
+    font-family: 'IropkeBatang';
+    line-height: 1.6;
+    color: #0F0F0F;
+}
+
+#section3 {
+    width: 100%;
     height: 200vh;
-    background-color: #b26161;
+    background-color: #000;
+    z-index: 3000;
+    position: relative;
+    
 }
