--- a/장진용/assets/css/style.css
+++ b/장진용/assets/css/style.css
@@ -36,7 +36,7 @@
 #section1 .left {
     width: 37vw;
     height: 100%;
-    background-image: url(../img/bg.jpg);
+    background-image: url(https://portfolio2-32a64.web.app/images/selfie.png);
     background-position: center top;
     border: 1px solid #000;
 }
