--- a/전윤기/assets/css/style.css
+++ b/전윤기/assets/css/style.css
@@ -51,15 +51,34 @@
 }
 #section1 .text-wrap h1 {
     font-size: 17vw;
-    line-height: 1.3;
+    line-height: 0.8;
     font-weight: 600;
     color: #fff;
-    white-space: nowrap;
     letter-spacing: -1vw;
-    margin-left: -10vw;
+    
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    
 }
+#section1 .text-wrap h1.active {
+    white-space: nowrap;
+    margin-left: -10vw;
+    margin-top: 60px;
+    position: static;
+    left: auto;
+    top: auto;
+}
+
+
 #section1 .text-wrap h1 em {
     font-weight: 200;
+    display: inline-block;
+}
+#section1 .text-wrap h1 span {
+    display: inline-block;
 }
 #section1 .text-wrap .sub {
     font-size: 19px;
@@ -68,8 +87,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2vw;
-    margin-top: -5vw;
+    padding: 1vw 2vw;
     font-family: 'NexonLv1Gothic';
 }
 
@@ -90,6 +108,11 @@
     left: 60%;
     position: relative;
     font-family: 'IropkeBatang';
+}
+.text-wrap3 span {
+    display: block;
+    text-align: left;
+    padding: 20px 0;
 }
 
 
