--- a/진현미/assets/css/style.css
+++ b/진현미/assets/css/style.css
@@ -62,6 +62,14 @@
     height: 100%;
     z-index: 10;
 }
+#section1 #canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
 #section1 .text-wrap {
     position: relative;
     z-index: 1000;
@@ -77,122 +85,221 @@
     border-radius: 50%;
     z-index: 1000;
 }
-#section1 .heart {
-    position: absolute;
-    left: 18%;
-    top: 16%;
-    z-index: 2000;
-    transform: translate(-50%, -50%) rotate(30deg);
-}
-#section1 .heart svg {
-    width: 200px;
-    height: 200px;
-}
-#section1 .heart .st0{fill:#E52E44;}
-#section1 .heart .st1{fill:#FA4654;}
-#section1 .heart .st2{fill:#EA792E;}
-#section1 .heart .st3{fill:#FF8B00;}
-#section1 .heart .st4{fill:#E2A427;}
-#section1 .heart .st5{fill:#F9C744;}
-#section1 .heart .st6{fill:#14A36D;}
-#section1 .heart .st7{fill:#15BE79;}
-#section1 .heart .st8{fill:#0989D8;}
-#section1 .heart .st9{fill:#29A3FB;}
-#section1 .heart .st10{fill:#8D00AF;}
-#section1 .heart .st11{fill:#AA0DD1;}
-#section1 .heart .st12{fill:#FB626E;}
-#section1 .heart .st13{fill:#FBD9A3;}
-#section1 .heart .st14{fill:#FFAC52;}
 
-.c-rainbow {
-    counter-reset: rainbow;
-    position: relative;
-    display: block;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-weight: 900;
-  }
-  .c-rainbow__layer {
-    --text-color: var(--color-foreground);
-    counter-increment: rainbow;
-    font-size: 9vw;
-    color: var(--text-color);
-    font-family: 'NanumSquareNeo';
-    text-shadow: -1px -1px 0 var(--color-black), 1px -1px 0 var(--color-black), -1px 1px 0 var(--color-black), 1px 1px 0 var(--color-black), 4px 4px 0 rgba(0, 0, 0, 0.2);
-    animation: rainbow 1.5s ease-in-out infinite;
-  }
-  .c-rainbow__layer:nth-child(1) {
-    animation-delay: calc( 1 / var(--delay) * 1s);
-    left: calc(var(--axis-x) * 1);
-    z-index: -10;
-  }
-  .c-rainbow__layer:nth-child(2) {
-    animation-delay: calc( 2 / var(--delay) * 1s);
-    left: calc(var(--axis-x) * 2);
-    z-index: -20;
-  }
-  .c-rainbow__layer:nth-child(3) {
-    animation-delay: calc( 3 / var(--delay) * 1s);
-    left: calc(var(--axis-x) * 3);
-    z-index: -30;
-  }
-  .c-rainbow__layer:nth-child(4) {
-    animation-delay: calc( 4 / var(--delay) * 1s);
-    left: calc(var(--axis-x) * 4);
-    z-index: -40;
-  }
-  .c-rainbow__layer:nth-child(5) {
-    animation-delay: calc( 5 / var(--delay) * 1s);
-    left: calc(var(--axis-x) * 5);
-    z-index: -50;
-  }
-  .c-rainbow__layer:nth-child(6) {
-    animation-delay: calc( 6 / var(--delay) * 1s);
-    left: calc(var(--axis-x) * 6);
-    z-index: -60;
-  }
-  .c-rainbow__layer:nth-child(7) {
-    animation-delay: calc( 7 / var(--delay) * 1s);
-    left: calc(var(--axis-x) * 7);
-    z-index: -70;
-  }
-  .c-rainbow__layer:not(:first-child) {
-    position: absolute;
-    top: 0;
-  }
-  .c-rainbow__layer--white {
-    --text-color: var(--color-white);
-  }
-  .c-rainbow__layer--orange {
-    --text-color: var(--color-orange);
-  }
-  .c-rainbow__layer--red {
-    --text-color: var(--color-red);
-  }
-  .c-rainbow__layer--violet {
-    --text-color: var(--color-violet);
-  }
-  .c-rainbow__layer--blue {
-    --text-color: var(--color-blue);
-  }
-  .c-rainbow__layer--green {
-    --text-color: var(--color-green);
-  }
-  .c-rainbow__layer--yellow {
-    --text-color: var(--color-yellow);
-  }
-  
-  @keyframes rainbow {
-    0%, 100% {
-      transform: translatey(var(--axis-y));
-    }
-    50% {
-      transform: translatey(calc(var(--axis-y) * -1));
-    }
-  }
+
+
+
+
+
+
+
+
+
+
 #section2 {
     width: 100%;
     height: 100vh;
-    background-color: #000;
+    position: relative;
+    z-index: 1000;
+}
+#section2 h2 {
+  width: 400px;
+  height: 60px;
+  background-color: #a4e0c6;
+  padding: 15px 0px 15px 40px;
+  border-radius: 0 30px 0 0;
+  display: inline-block;
+  color: #000000;
+}
+#section2 .sec2-cont {
+  height: 100%;
+  background-color: #ccf1e1;
+}
+#section2 h3 {
+  font-size: 2.4vw;
+  padding: 2vw;
+}
+#section2 .top {
+  height: 40vh;
+  border-bottom: 1px solid #14A36D;
+  display: flex;
+  flex-direction: column;
+  padding-right: 1vw;
+  padding-left: 50vw;
+}
+#section2 .top h4 {
+  font-size: 5vw;
+  line-height: 1.1;
+  text-align: right;
+  margin-bottom: 2vw;
+  font-weight: 600;
+}
+#section2 .top p {
+  padding-left: 50%;
+  text-align: right;
+  font-size: 16px;
+  line-height: 1.5;
+}
+#section2 .bottom {
+  padding: 40px 20px 20px 20px;
+  width: 20%;
+}
+#section2 .bottom a {
+  font-size: 26px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50px;
+  padding: 4px 40px;
+  display: inline-block;
+  margin-top: 20px;
+}
+#section2 .img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 25vw;
+  height: 25vw;
+  border: 2px solid #14A36D;
+  border-radius: 50%;
+}
+#section2 .img .heart {
+  position: absolute;
+  left: 18%;
+  top: 16%;
+  z-index: 2000;
+  transform: translate(-50%, -50%) rotate(-30deg);
+}
+#section2 .img .heart svg {
+  width: 250px;
+  height: 250px;
+}
+#section2 .heart .st0{fill:#E52E44;}
+#section2 .heart .st1{fill:#FA4654;}
+#section2 .heart .st2{fill:#EA792E;}
+#section2 .heart .st3{fill:#FF8B00;}
+#section2 .heart .st4{fill:#E2A427;}
+#section2 .heart .st5{fill:#F9C744;}
+#section2 .heart .st6{fill:#14A36D;}
+#section2 .heart .st7{fill:#15BE79;}
+#section2 .heart .st8{fill:#0989D8;}
+#section2 .heart .st9{fill:#29A3FB;}
+#section2 .heart .st10{fill:#8D00AF;}
+#section2 .heart .st11{fill:#AA0DD1;}
+#section2 .heart .st12{fill:#FB626E;}
+#section2 .heart .st13{fill:#FBD9A3;}
+#section2 .heart .st14{fill:#FFAC52;}
+
+.c-rainbow {
+  counter-reset: rainbow;
+  position: relative;
+  display: block;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-weight: 900;
+  font-family: 'Poppins';
+}
+.c-rainbow__layer {
+  --text-color: var(--color-foreground);
+  counter-increment: rainbow;
+  font-size: 11vw;
+  color: var(--text-color);
+
+  text-shadow: -1px -1px 0 var(--color-black), 1px -1px 0 var(--color-black), -1px 1px 0 var(--color-black), 1px 1px 0 var(--color-black), 4px 4px 0 rgba(0, 0, 0, 0.2);
+  animation: rainbow 3.5s ease-in-out infinite;
+}
+.c-rainbow__layer:nth-child(1) {
+  animation-delay: calc( 1 / var(--delay) * 1s);
+  left: calc(var(--axis-x) * 1);
+  z-index: -10;
+}
+.c-rainbow__layer:nth-child(2) {
+  animation-delay: calc( 2 / var(--delay) * 1s);
+  left: calc(var(--axis-x) * 2);
+  z-index: -20;
+}
+.c-rainbow__layer:nth-child(3) {
+  animation-delay: calc( 3 / var(--delay) * 1s);
+  left: calc(var(--axis-x) * 3);
+  z-index: -30;
+}
+.c-rainbow__layer:nth-child(4) {
+  animation-delay: calc( 4 / var(--delay) * 1s);
+  left: calc(var(--axis-x) * 4);
+  z-index: -40;
+}
+.c-rainbow__layer:nth-child(5) {
+  animation-delay: calc( 5 / var(--delay) * 1s);
+  left: calc(var(--axis-x) * 5);
+  z-index: -50;
+}
+.c-rainbow__layer:nth-child(6) {
+  animation-delay: calc( 6 / var(--delay) * 1s);
+  left: calc(var(--axis-x) * 6);
+  z-index: -60;
+}
+.c-rainbow__layer:nth-child(7) {
+  animation-delay: calc( 7 / var(--delay) * 1s);
+  left: calc(var(--axis-x) * 7);
+  z-index: -70;
+}
+.c-rainbow__layer:not(:first-child) {
+  position: absolute;
+  top: 0;
+}
+.c-rainbow__layer--white {
+  --text-color: var(--color-white);
+}
+.c-rainbow__layer--orange {
+  --text-color: var(--color-orange);
+}
+.c-rainbow__layer--red {
+  --text-color: var(--color-red);
+}
+.c-rainbow__layer--violet {
+  --text-color: var(--color-violet);
+}
+.c-rainbow__layer--blue {
+  --text-color: var(--color-blue);
+}
+.c-rainbow__layer--green {
+  --text-color: var(--color-green);
+}
+.c-rainbow__layer--yellow {
+  --text-color: var(--color-yellow);
+}
+
+@keyframes rainbow {
+  0%, 100% {
+    transform: translatey(var(--axis-y));
+  }
+  50% {
+    transform: translatey(calc(var(--axis-y) * -1));
+  }
+}
+
+
+
+
+
+#section3 {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: 3000;
+}
+#section3 h2 {
+  width: 400px;
+  height: 60px;
+  margin-left: 400px;
+  background-color: #fae493;
+  padding: 15px 0px 15px 40px;
+  border-radius: 30px 30px 0 0;
+  display: inline-block;
+  color: #000000;
+}
+#section3 .sec3-cont {
+  height: 100%;
+  background-color: #fff3c7;
 }
