--- a/이유나/assets/css/style.css
+++ b/이유나/assets/css/style.css
@@ -49,6 +49,7 @@
     width: 500px;
     padding-left: 10vw;
     color: #fff;
+    padding-bottom: 20vw;
 }
 #section1 .desc2 {
     font-size: 5vw;
@@ -153,15 +154,72 @@
     font-family: 'ChosunNm';
     color: #4B3D30;
 }
+.aboutBox2 {
+    padding: 20vw 0;
+    display: flex;
+    align-items: end;
+}
+.aboutBox2 .title {
+    width: 50%;
+    text-align: right;
+    font-size: 9vw;
+    color: #BE968B;
+    font-weight: 300;
+    margin-right: -2vw;
+    position: relative;
+    z-index: 100;
+    padding-bottom: 20vw;
+    mix-blend-mode: difference;
+}
+.aboutBox2 .text {
+    width: 50%;
+}
+.aboutBox2 .text .img {
+    background-image: url(../img/sec3.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 30vw;
+    height: 40vw;
+}
+.aboutBox2 .text .desc {
+    font-size: 20px;
+    font-family: 'ChosunNm';
+    color: #4B3D30;
+    padding: 3vw;
+    padding-top: 0;
+}
 
 
 #section3 {
     height: 100vh;
-    background-color: #000;
+    background-color: #4D3D30;
     color: #fff;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.box {
-    width: 100px;
-    height: 100px;
+
+#section3 .box {
+    position: absolute;
+    top: 50%;
+    transform: translatey(-50%);
+    width: 10%;
+    height: 10vh;
     background-color: #fff;
+    background-image: url(https://images.unsplash.com/photo-1603900450760-e6f37fc02870?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: none;
+}
+#section3 .text {
+    font-size: 8vw;
+    white-space: nowrap;
+    text-transform: uppercase;
+}
+
+#section4 {
+    height: 2000px;
+    background-color: #ccc;
 }
