--- a/김도현/assets/css/style.css
+++ b/김도현/assets/css/style.css
@@ -9,6 +9,9 @@
     padding: 10px 20px;
     background-color: #0000003c;
     backdrop-filter: blur(10px);
+    z-index: 100000;
+    left: 0;
+    top: 0;
 }
 #header .title {
     /* text-transform: uppercase; */
@@ -46,6 +49,8 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    background-color: #000;
+    z-index: 10;
 }
 canvas {
     position: absolute;
@@ -53,11 +58,13 @@ canvas {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 1;
 }
 
 #section1 .title {
     text-align: center;
+    position: relative;
+    z-index: 1000;
 }
 #section1 .title .t1 {
     padding-right: 30vw;
@@ -76,15 +83,47 @@ canvas {
     text-transform: uppercase;
 }
 #section1 .title .t3 {
-    float: right;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     background-color: #F3541B;
     display: inline-block;
-    padding: 3px 3px 1px 3px;
+    padding: 3px 23px 1px 23px;
+    color: #fff;
+    font-size: 90px;
+    white-space: nowrap;
+    width: 58vw;
+    font-size: 4vw;
 }
+
 #section1 .title .t3 span {
     font-size: 40px;
     line-height: 1;
     color: #fff;
     white-space: nowrap;
     font-weight: 100;
+}
+
+#section1 .bg {
+    background-image: url(https://images.unsplash.com/photo-1518599904199-0ca897819ddb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1167&q=80);
+    width: 100%;
+    height: 0vh;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1000;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+
+/* #section2 */
+#section2 {
+    position: relative;
+    z-index: 2000;
+    background: #0000005b;
+    backdrop-filter: blur(20px);
 }
