--- a/이유나/assets/css/style.css
+++ b/이유나/assets/css/style.css
@@ -223,3 +223,43 @@
     height: 2000px;
     background-color: #ccc;
 }
+
+#section5 {
+    background-color: #878787;
+}
+
+.sec5-box1 {
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(255, 201, 201);
+    position: relative;
+    z-index: 100;
+}
+.sec5-box2 {
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(212, 149, 149);
+    position: relative;
+    z-index: 200;
+}
+.sec5-box3 {
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(133, 103, 103);
+    position: relative;
+    z-index: 300;
+}
+.sec5-box4 {
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(87, 64, 64);
+    position: relative;
+    z-index: 400;
+}
+
+
+
+#section6 {
+    height: 2000px;
+    background-color: #ff0000;
+}
