--- a/노지영/assets/css/style.css
+++ b/노지영/assets/css/style.css
@@ -2,19 +2,67 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #000;
 }
-#section1 .bg {
+#section1 .bg-wrap {
     width: 100%;
     height: 100%;
-    background-color: #fff;
     position: absolute;
     left: 0; top: 0;
-    z-index: -1;
+    z-index: 10;
+    background: linear-gradient(to bottom,#F8E4D9 0%,#F6E3D5 70%,#F1D0BF 100%);
+}
+#section1 .bg-wrap .bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: 10;
+    opacity: 1;
+}
+#section1 .bg-wrap .about {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    z-index: 9;
+}
+#section1 .bg-wrap .about .left {
+    width: 50%;
+    background-image: url(https://noji-portfolio.netlify.app/assets/profile_02-min-3ad00d22.png);
+    background-size: 90%;
+    background-repeat: no-repeat;
+    background-position: right bottom;
+}
+#section1 .bg-wrap .about .right {
+    width: 50%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 4%;
+}
+#section1 .bg-wrap .about .right img {
+    width: 50%;
+    margin-bottom: 30px;
+}
+#section1 .bg-wrap .about .right p {
+    width: 100%;
+    font-family: 'IropkeBatang';
+    white-space: pre-line;
+    line-height: 1.5;
+}
+#section1 .text-wrap {
+    position: relative;
+    z-index: 1000;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 .text-wrap > span {
     color: #fff;
@@ -23,10 +71,10 @@
     font-size: 3vw;
     line-height: 1;
     border-radius: 100px;
-    padding: 0.5vw 4vw 2vw 4vw;
+    padding: 0.7vw 4vw 2vw 4vw;
     display: inline-block;
     font-weight: bold;
-    margin: 0.4vw;
+    margin: 0.5vw;
 }
 .title-wrap {
     position: absolute;
@@ -34,6 +82,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
+    text-align: center;
 }
 .title-wrap > div {
     font-size: 5vw;
@@ -65,10 +114,12 @@
     margin-left: -10vw;
 }
 
+
+
 /* section2 */
 #section2  {
     height: 2000px;
-    background-color: #fff;
+    background-color: red;
     position: relative;
     z-index: 1000;
 }
