--- a/진현미/assets/css/style.css
+++ b/진현미/assets/css/style.css
@@ -103,7 +103,7 @@
     z-index: 1000;
 }
 #section2 h2 {
-  width: 400px;
+  width: 20%;
   height: 60px;
   background-color: #a4e0c6;
   padding: 15px 0px 15px 40px;
@@ -111,6 +111,7 @@
   display: inline-block;
   color: #000000;
 }
+
 #section2 .sec2-cont {
   height: 100%;
   background-color: #ccf1e1;
@@ -285,15 +286,16 @@
 
 #section3 {
   width: 100%;
-  height: 100vh;
+  height: 400vh;
   position: relative;
   z-index: 3000;
+  overflow: hidden;
 }
 #section3 h2 {
-  width: 400px;
+  width: 20%;
   height: 60px;
-  margin-left: 400px;
-  background-color: #fae493;
+  margin-left: 20%;
+  background-color: #ffeba5;
   padding: 15px 0px 15px 40px;
   border-radius: 30px 30px 0 0;
   display: inline-block;
@@ -302,4 +304,139 @@
 #section3 .sec3-cont {
   height: 100%;
   background-color: #fff3c7;
+}
+#section3 h3 {
+  font-size: 2.4vw;
+  padding: 2vw;
+}
+.site-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  width: 320vh;
+}
+.site-wrap > .site {
+  width: 78.5vh;
+  height: 78.5vh;
+  background-color: #000;
+  padding: 40px;
+  position: relative;
+}
+.site-wrap > .site img {
+  width: 450px;
+}
+.site-wrap > .site span {
+  color: #fff;
+  font-size: 23px;
+}
+.site-wrap > .site h4 {
+  text-align: right;
+  font-size: 30px;
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+.site-wrap > .site > div {
+  display: flex;
+}
+.site-wrap > .site .left {
+  width: 50%;
+  color: #fff;
+}
+.site-wrap > .site .left a {
+  font-size: 20px;
+  background-color: #fff;
+  display: inline-block;
+  border-radius: 100px;
+  padding: 10px 20px;
+  margin-top: 10px;
+  color: #000;
+}
+.site-wrap > .site .right {
+  width: 50%;
+}
+.site-wrap > .site .right img {
+  position: absolute;
+  right: 40px;
+  bottom: 40px;
+}
+.site-wrap > .site.s1 {
+  background-color: #FA4654;
+}
+.site-wrap > .site.s2 {
+  background-color: #FF8B00;
+}
+.site-wrap > .site.s3 {
+  background-color: #4A65F6;
+}
+.site-wrap > .site.s4 {
+  background-color: #14A36D;
+}
+
+
+
+
+#section4 {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: 3000;
+}
+#section4 h2 {
+  width: 20%;
+  height: 60px;
+  margin-left: 40%;
+  background-color: #93fac3;
+  padding: 15px 0px 15px 40px;
+  border-radius: 30px 30px 0 0;
+  display: inline-block;
+  color: #000000;
+}
+#section4 .sec4-cont {
+  height: 100%;
+  background-color: #c7ffeb;
+}
+
+#section5 {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: 3000;
+}
+#section5 h2 {
+  width: 20%;
+  height: 60px;
+  margin-left: 60%;
+  background-color: #93fac3;
+  padding: 15px 0px 15px 40px;
+  border-radius: 30px 30px 0 0;
+  display: inline-block;
+  color: #000000;
+}
+#section5 .sec5-cont {
+  height: 100%;
+  background-color: #2b604d;
+}
+
+
+
+#section6 {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: 3000;
+}
+#section6 h2 {
+  width: 20%;
+  height: 60px;
+  margin-left: 80%;
+  background-color: #93b7fa;
+  padding: 15px 0px 15px 40px;
+  border-radius: 30px 30px 0 0;
+  display: inline-block;
+  color: #000000;
+}
+#section6 .sec6-cont {
+  height: 100%;
+  background-color: #93b7fa;
 }
