--- a/김현빈/assets/css/style2.css
+++ b/김현빈/assets/css/style2.css
@@ -7,7 +7,7 @@
     color: #fff;
 }
 #section1 {
-    width: 300%;
+
 }
 #section2 {
     width: 100%;
@@ -40,10 +40,10 @@
 #section1 {
     background-color: #fff;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 #section1 .img {
-    width: 500px;
+    width: 50vh;
     height: 80vh;
     visibility: hidden;
     overflow: hidden;
@@ -74,7 +74,7 @@
 }
 #section1 .desc {
     color: #333;
-    width: 350px;
+    width: 40vh;
     font-family: 'IropkeBatang';
     margin-left: 6vh;
     margin-top: 4vh;
@@ -107,7 +107,7 @@
     padding-left: 10vh;
 }
 #section1 .about {
-    width: 700px;
+    width: 80vh;
     height: 100vh;
     overflow: hidden;
     margin-left: -1000px;
@@ -120,14 +120,14 @@
 }
 #section1 .about-text {
     color: #222;
-    width: 1300px;
-    font-family: 'IropkeBatang';
+    width: 150vh;
     font-family: 'ChosunNm';
     font-size: 34px;
     padding: 10px 80px;
     white-space: pre;
     line-height: 1.5;
     position: relative;
+    background-color: #ccc;
 }
 #section1 .about-text em {
     position: relative;
