--- a/권현정/assets/css/style.css
+++ b/권현정/assets/css/style.css
@@ -200,30 +200,85 @@
 }
 .title-wrap > div {
     font-size: 7vw;
-    font-family: 'poppins';
-    font-weight: 100;
-    padding: 2vw 2vw 2vw 4vw;
-    line-height: 1;
+    font-family: 'Neue Haas Grotesk Display Pro';
+    font-weight: 900;
+    padding: 2.6vw 2vw 2vw 4vw;
+    line-height: 0.91;
     text-transform: uppercase;
 }
 .title-wrap .sec3-title1 {
     background-color: #EBEAE4;
-    font-family: 'Lato';
-    font-weight: 100;
 }
 .title-wrap .sec3-title2 {
     background-color: #b4b4b4;
-    font-weight: 100;
 }
 .title-wrap .sec3-title3 {
     background-color: #ddaeae;
-    font-weight: 100;
 }
 .title-wrap .sec3-title4 {
     background-color: #b3ddae;
-    font-weight: 100;
 }
 .title-wrap .sec3-title5 {
     background-color: #939a93;
-    font-weight: 100;
 }
+
+
+.site-wrap {
+    padding: 20px;
+}
+.site-wrap .site {
+    border: 1px solid #000;
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+.site-wrap .site h3 {
+    border-bottom: 1px solid #000;
+    font-family: 'Neue Haas Grotesk Display Pro';
+    font-weight: 900;
+    font-size: 5vw;
+    padding: 0 2vw;
+    line-height: 1.2;
+    padding-top: 0.5vw;
+    width: 100%;
+    
+}
+.site-wrap .site .left {
+    width: 70%;
+    height: 100%;
+    border-right: 1px solid #000;
+    background-image: url(https://images.unsplash.com/photo-1487058792275-0ad4aaf24ca7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
+    background-size: cover;
+}
+.site-wrap .site .right {
+    width: 30%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center
+}
+.site-wrap .site .right span {
+    border: 1px solid #000;
+    font-size: 20px;
+    padding: 5px 40px;
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 40px;
+}
+.site-wrap .site .right p {
+    font-family: 'IropkeBatang';
+    width: 100%;
+    margin-bottom: 20px;
+    line-height: 1.5;
+    word-break: keep-all;
+}
+.site-wrap .site .right h2 {
+    font-weight: 900;
+    font-size: 40px;
+}
+
+.site-wrap .site2 {}
+.site-wrap .site3 {}
