--- a/이은지/assets/css/style.css
+++ b/이은지/assets/css/style.css
@@ -1,6 +1,4 @@
-body {
-    background: #000;
-}
+
 #header {
     position: fixed;
     left: 0;
@@ -172,11 +170,157 @@ body {
     color: #0F0F0F;
 }
 
+/* section3 */
 #section3 {
     width: 100%;
-    height: 200vh;
-    background-color: #000;
     z-index: 3000;
     position: relative;
-    
+    background-color: #041F1E;
+    padding-bottom: 150px;
+}
+#section3 h2 {
+    color: #fff;
+    font-family: 'PP Hatton';
+    text-align: left;
+    padding: 15vw 0 0 5vw;
+    font-size: 10vw;
+    line-height: 1;
+    font-weight: 200;
+    text-transform: uppercase;
+}
+#section3 h2 em {
+    font-weight: 500;
+    display: block;
+}
+#section3 .desc { 
+    padding-left: 5vw;
+    width: 90%;
+    color: #fff;
+    font-family: 'IropkeBatang';
+}
+.site-wrap {
+    padding: 5%;
+}
+.site-wrap .site {
+    background-color: #fff;
+    height: 500px;
+    margin-right: 20%;
+    border-radius: 20px;
+    display: flex;
+
+}
+.site-wrap .site .left {
+    width: 60%;
+    padding: 5%;
+    position: relative;
+    overflow: hidden;
+}
+.site-wrap .site .left::after {
+    content: '01';
+    position: absolute;
+    right: -4vw; 
+    bottom: -6vw;
+    font-size: 26vw;
+    line-height: 1;
+    color: #0f490f08;
+    font-weight: 900;
+    font-family: 'Poppins';
+}
+.site-wrap .site .left h3 {
+    font-size: 4.5vw;
+    font-family: 'PP Hatton';
+    color: #0f490f;
+    font-weight: 900;
+}
+.site-wrap .site .left p {
+    font-family: 'IropkeBatang';
+    font-size: 16px;
+    line-height: 1.6;
+}
+.site-wrap .site .left .btn a {
+    background-color: #0f490f;
+    padding: 10px 40px;
+    color: #fff;
+    display: inline-block;
+    margin-top: 20px;
+    border-radius: 50px;
+    text-transform: uppercase;
+    margin-right: 5px;
+}
+.site-wrap .site .right {
+    width: 40%;
+    background-image: url(https://ohserin.github.io/webs_class/webs_class/portfolio/img/site1.jpg);
+    background-size: cover;
+    border-radius: 0 20px 20px 0;
+}
+
+
+
+/* section4 */
+#section4 {
+    padding-bottom: 150px;
+}
+#section4 h2 {
+    color: #0f490f;
+    font-family: 'PP Hatton';
+    text-align: right;
+    padding: 15vw 5vw 0 5vw;
+    font-size: 10vw;
+    line-height: 1;
+    font-weight: 200;
+    text-transform: uppercase;
+}
+#section4 h2 em {
+    font-weight: 500;
+    display: block;
+}
+#section4 .desc { 
+    width: 100%;
+    padding-right: 5%;
+    color: #0f490f;
+    text-align: right;
+    font-family: 'IropkeBatang';
+    margin-bottom: 100px;
+}
+
+.script-wrap {
+    padding: 100px 0;
+}
+.script-wrap .script {
+    width: 30vw;
+    height: 800px;
+    margin-left: 10%;
+    border-radius: 20px;
+    position: relative;
+}
+.script-wrap .script .img {
+    background-image: url(https://images.unsplash.com/photo-1501747315-124a0eaca060?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80);
+    background-position: center center;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+.script-wrap .script .info {
+    position: absolute;
+    right: -350px;
+    top: 100px;
+    width: 400px;
+}
+.script-wrap .script .info h3 {
+    color: #0f490f;
+    font-family: 'PP Hatton';
+    font-size: 60px;
+}
+.script-wrap .script .info p {
+    color: #0f490f;
+    font-family: 'IropkeBatang';
+}
+.script-wrap .script .info div a {
+    background-color: #0f490f;
+    color: #fff;
+    padding: 4px 20px;
+    margin-top: 10px;
+    display: inline-block;
+    border-radius: 20px;
+    text-transform: uppercase;
 }
