--- a/김현빈/assets/css/style2.css
+++ b/김현빈/assets/css/style2.css
@@ -6,7 +6,7 @@
 }
 #section1 {}
 #section2 {}
-#section3 {background-color: #555;}
+#section3 {background-color: #000; width: 5000px;}
 #section4 {background-color: #666;}
 #section5 {background-color: #777;}
 #section6 {background-color: #888;}
@@ -141,11 +141,10 @@
 /* section2 */
 #section2 {
     margin-left: 50vh;
+    margin-right: 50vh;
     position: relative;
-    overflow: hidden;
     /* background-color: #f28e8e; */
     display: flex;
-    width: 5000px;
 }
 #section2 .arrow {
     width: 60vh;
@@ -191,6 +190,7 @@
     font-family: 'Cormorant Garamond';
     text-transform: uppercase;
     writing-mode: vertical-lr;
+    white-space: nowrap;
     font-size: 40vh;
     font-weight: 100;
     letter-spacing: -2vw;
@@ -215,6 +215,18 @@
     top: 45%;
     left: 10vh;
     color: #000;
+}
+#section2 .site.s2 {
+    margin-left: 30vh;
+}
+#section2 .site.s2 .text {
+    top: 15%;
+}
+#section2 .site.s2 .btn {
+    top: 10vh
+}
+#section2 .site.s2 .img {
+    background-image: url(https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1169&q=80);
 }
 #section2 .text h3 {
     font-family: 'Cormorant Garamond';
@@ -251,5 +263,137 @@
     border: 1px solid #000;
     background-color: #fff;
     color: #000;
+    display: none;
+}
+
+
+/* section3 */
+#section3 {
+    margin-left: 50vh;
+    margin-right: 50vh;
+    position: relative;
+    /* background-color: #f28e8e; */
+    display: flex;
+}
+#section3 .arrow {
+    width: 60vh;
+    height: 100%;
+    border-left: 1px solid #ccc;
+    position: relative;
+    margin-right: 30vh;
+    margin-left: 50vh;
+}
+#section3 .arrow em {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color:#666;
+    font-family: 'Poppins';
+    font-size: 16px;
+    text-transform: uppercase;
+}
+#section3 .arrow::before {
+    content: '';
+    width: 70.7vh;
+    height: 1px;
+    background-color: #ccc;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transform-origin: left top;
+    transform: rotate(45deg);
+}
+#section3 .arrow::after {
+    content: '';
+    width: 70.7vh;
+    height: 1px;
+    background-color: #ccc;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform-origin: left bottom;
+    transform: rotate(-45deg);
+}
+#section3 .text-title {
+    color: #fff;
+    font-family: 'Cormorant Garamond';
+    text-transform: uppercase;
+    writing-mode: vertical-lr;
+    white-space: nowrap;
+    font-size: 40vh;
+    font-weight: 100;
+    letter-spacing: -2vw;
+    margin-top: -23vw;
+    border-right: 1px solid #353535;
+}
+#section3 .script {
+    display: flex;
+    flex-wrap: nowrap;
+    padding-left: 40vh;
+    padding-right: 30vh;
+    position: relative;
+}
+#section3 .script .img {
+    width: 800px;
+    height: 60vh;
+    background-image: url(https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
+    background-size: cover;
+    background-position: center;
+    margin-top: 20vh;
+    margin-left: 20%;
+    position: relative;
+}
+#section3 .script .img2 {
+    position: absolute;
+    right: -300px;
+    bottom: -10vh;
+    width: 400px;
+    height: 300px;
+    background-image: url(https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
+    background-size: cover;
+}
+#section3 .script .text {
+    margin-left: 10vh;
+    margin-top: 20vh;
+    width: 100vh;
+}
+#section3 .script .text h3 {
+    font-family: 'Cormorant Garamond';
+    text-transform: uppercase;
+    letter-spacing: -0.4vh;
+    font-size: 12vh;
+    line-height: .81;
+    margin-top: -11vh;
+    margin-bottom: 1vh;
+}
+#section3 .script .text p {
+    font-size: 14px;
+    font-family: 'ChosunNm';
+    line-height: 1.6;
+    color: #b7b7b7;
+    padding-left: 3vh;
+}
+#section3 .btn {
+    position: absolute;
+    right: 20vh;
+    top: 40vh
+}
+#section3 .btn a {
+    width: 20vh;
+    height: 20vh;
+    line-height: 20vh;
+    background-color: #fff;
+    color: #000;
+    display: inline-block;
+    border-radius: 50%;
+    text-align: center;
+    font-family: 'Cormorant Garamond';
+    font-size: 26px;
+}
+#section3 .btn a:last-child {
+    border: 1px solid #fff;
+    background-color: #fff;
+    color: #fff;
     display: none;
 }
